objects/Extended_Profile_Category__c.object
<CustomObject>
    <fields>
        <fullName>MDCP_Active__c</fullName>
        <description>The field provides an indication whether this record is still current or has been inactivated (logically deleted) in the MDCP source system.</description>
        <label>MDCP Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Category_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Extended Profile Category. Extended Profile Category reference to a parent Extended Profile Category object&apos;s record.</description>
        <label>Parent Category Name</label>
        <referenceTo>Extended_Profile_Category__c</referenceTo>
        <relationshipLabel>Extended Profile Categories</relationshipLabel>
        <relationshipName>Extended_Profile_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Userkey__c</fullName>
        <description>External ID field for creating record uniqueness withing this new custom object. Details on how the key will be built are pending on the MDCP design of the WS response for extended partner profile.</description>
        <externalId>true</externalId>
        <label>Userkey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Extended Profile Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Category_Name__c</columns>
        <columns>MDCP_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Extended Profile Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Extended Profile Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>